{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 14,
  "lineage": "7e1182da-4d5d-7792-3e82-6d027d74ec31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eeccc616d918b851",
            "domain": "vpc",
            "id": "eipalloc-0eeccc616d918b851",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-52-199-20-142.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.199.20.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "how-aws-ecs-run-eip-for-natgw-1a"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-eip-for-natgw-1a",
              "application": "how-aws-ecs-run"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:internet-gateway/igw-07eab2af08943018c",
            "id": "igw-07eab2af08943018c",
            "owner_id": "438344051408",
            "tags": {
              "Name": "how-aws-ecs-run-igw"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-igw",
              "application": "how-aws-ecs-run"
            },
            "vpc_id": "vpc-09cbd7a449a92eb48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eeccc616d918b851",
            "association_id": "eipassoc-01ba1a32300b1b3b8",
            "connectivity_type": "public",
            "id": "nat-059906f91f4952189",
            "network_interface_id": "eni-0663e7cc2287eb3d4",
            "private_ip": "10.0.1.219",
            "public_ip": "52.199.20.142",
            "subnet_id": "subnet-0983e2c6d63f9cbfc",
            "tags": {
              "Name": "how-aws-ecs-run-natgw-1a"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-natgw-1a",
              "application": "how-aws-ecs-run"
            }
          },
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_subnet.public-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:route-table/rtb-047daf16c0ece55bb",
            "id": "rtb-047daf16c0ece55bb",
            "owner_id": "438344051408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059906f91f4952189",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "how-aws-ecs-run-private-rtb"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-private-rtb",
              "application": "how-aws-ecs-run"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cbd7a449a92eb48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_nat_gateway.nat-1a",
            "aws_subnet.public-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:route-table/rtb-05b0e7091fd2b74c5",
            "id": "rtb-05b0e7091fd2b74c5",
            "owner_id": "438344051408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07eab2af08943018c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "how-aws-ecs-run-public-rtb"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-public-rtb",
              "application": "how-aws-ecs-run"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cbd7a449a92eb48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a-to-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0369ca871a1bf1f2e",
            "route_table_id": "rtb-047daf16c0ece55bb",
            "subnet_id": "subnet-0e6191af302d2d5bb"
          },
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_nat_gateway.nat-1a",
            "aws_route_table.private",
            "aws_subnet.private-1a",
            "aws_subnet.public-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a-to-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffcbba005459c2f6",
            "route_table_id": "rtb-05b0e7091fd2b74c5",
            "subnet_id": "subnet-0983e2c6d63f9cbfc"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1b-to-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01009dd8656b7ed17",
            "route_table_id": "rtb-05b0e7091fd2b74c5",
            "subnet_id": "subnet-05e6d0916e0aab972"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:subnet/subnet-0e6191af302d2d5bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6191af302d2d5bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438344051408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "how-aws-ecs-run-private-1a"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-private-1a",
              "application": "how-aws-ecs-run"
            },
            "vpc_id": "vpc-09cbd7a449a92eb48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:subnet/subnet-03616ab331752c702",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03616ab331752c702",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438344051408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "how-aws-ecs-run-private-1b"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-private-1b",
              "application": "how-aws-ecs-run"
            },
            "vpc_id": "vpc-09cbd7a449a92eb48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:subnet/subnet-0983e2c6d63f9cbfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0983e2c6d63f9cbfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438344051408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "how-aws-ecs-run-public-1a"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-public-1a",
              "application": "how-aws-ecs-run"
            },
            "vpc_id": "vpc-09cbd7a449a92eb48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:subnet/subnet-05e6d0916e0aab972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e6d0916e0aab972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438344051408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "how-aws-ecs-run-public-1b"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-public-1b",
              "application": "how-aws-ecs-run"
            },
            "vpc_id": "vpc-09cbd7a449a92eb48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:vpc/vpc-09cbd7a449a92eb48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e5c959628f99ec98",
            "default_route_table_id": "rtb-0bd4077faa2ff16dd",
            "default_security_group_id": "sg-0ba33facb95444337",
            "dhcp_options_id": "dopt-00e02391a714a8f99",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cbd7a449a92eb48",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd4077faa2ff16dd",
            "owner_id": "438344051408",
            "tags": {
              "Name": "how-aws-ecs-run-vpc"
            },
            "tags_all": {
              "Name": "how-aws-ecs-run-vpc",
              "application": "how-aws-ecs-run"
            }
          }
        }
      ]
    }
  ]
}